Use in-body modals for summernote to solve z-index issue with backdrop (#1270)

--- a/app/styles/components/modal-dialog.less
+++ b/app/styles/components/modal-dialog.less
@@ -84,3 +84,10 @@ body.centered-modal-showing {
   box-sizing: border-box;
   box-shadow: 0px 4px 25px 4px rgba(0,0,0,0.30);
 }
+
+/* Other Modals */
+.modal-dialog {
+  .btn.btn-primary {
+    color: #fff;
+  }
+}
